--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,26 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:      pygments
+highlighter:      Pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
-title:            Nguyen
-tagline:          'Researcher / Data Scientist'
+title:            Hyde
+tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://kndtran.github.io
+url:              http://hyde.getpoole.com
 baseurl:          /
 
 author:
-  name:           'Khoi-Nguyen Tran'
-  url:            https://twitter.com/kndtran
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
 
-gems:							[jekyll-paginate]
+gems:							[jekyll-paginate, jekyll-gist]
 paginate:         5
-paginate_path:		"page:num"
 
 # Custom vars
-version:          1.0.0
+version:          2.1.0
 
 github:
-  repo:           https://github.com/kndtran
+  repo:           https://github.com/poole/hyde
