--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:
 title: Khoi-Nguyen Tran
 author: Khoi-Nguyen Tran
 description: Resume and personal site
-avatar: profile.png
+avatar: profile2.jpeg
 #email: kndtran@gmail.com
 facebook: kndtran
 github: kndtran
